Add python devshell

--- a/hosts/cwilliams-work-laptop/users/out-of-store/envoluntary.toml
+++ b/hosts/cwilliams-work-laptop/users/out-of-store/envoluntary.toml
@@ -1,3 +1,8 @@
 [[entries]]
 pattern = "~/atlassian"
 flake_reference = "~/.system-nix/templates/node22"
+
+[[entries]]
+pattern = "~/atlassian/dashboards/ecosystem-platform-dashboards"
+flake_reference = "~/.system-nix/templates/python"
+
