Temp disable python devenv

--- a/hosts/cwilliams-work-laptop/users/out-of-store/envoluntary.toml
+++ b/hosts/cwilliams-work-laptop/users/out-of-store/envoluntary.toml
@@ -2,7 +2,7 @@
 pattern = "~/atlassian"
 flake_reference = "~/.system-nix/templates/node22"
 
-[[entries]]
-pattern = "~/atlassian/dashboards/ecosystem-platform-dashboards"
-flake_reference = "~/.system-nix/templates/python"
+# [[entries]]
+# pattern = "~/atlassian/dashboards/ecosystem-platform-dashboards"
+# flake_reference = "~/.system-nix/templates/python"
 
