--- a/modules/home/out-of-store/aerospace.toml
+++ b/modules/home/out-of-store/aerospace.toml
@@ -41,6 +41,13 @@ key-mapping.preset = 'qwerty'
 # Callbacks
 on-focus-changed = ['move-mouse window-lazy-center'] # Mouse lazily follows any focus (window or workspace)
 
+# Notify Sketchybar about workspace change and update icons
+exec-on-workspace-change = [
+  '/bin/bash',
+  '-c',
+  '/etc/profiles/per-user/cwilliams/bin/sketchybar --trigger aerospace_workspace_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE PREV_WORKSPACE=$AEROSPACE_PREV_WORKSPACE']
+
+
 # Gaps between windows (inner-*) and between monitor edges (outer-*).
 # Possible values:
 # - Constant:     gaps.outer.top = 8
@@ -53,7 +60,11 @@ inner.horizontal = 0
 inner.vertical =   0
 outer.left =       0
 outer.bottom =     0
-outer.top =        0
+outer.top =        [
+  { monitor."built-in" = 10 },
+  { monitor."main" = 10 },
+  40
+]
 outer.right =      0
 
 # See https://nikitabobko.github.io/AeroSpace/guide#exec-env-vars
@@ -72,14 +83,12 @@ PATH = '/opt/homebrew/bin:/opt/homebrew/sbin:${PATH}'
 7 = ['main']
 8 = ['main']
 9 = ['main']
-Q = ['lg', 'built-in']
-W = ['lg', 'built-in']
-E = ['lg', 'built-in']
-A = ['built-in', 'sidecar', 'lg']
-S = ['built-in', 'sidecar', 'lg']
-D = ['built-in', 'sidecar', 'lg']
-G = ['sidecar']
-Z = ['main'] # Zoom
+Q = ['built-in']
+W = ['built-in']
+E = ['built-in']
+A = ['built-in']
+S = ['built-in']
+D = ['built-in']
 
 # 'main' binding mode declaration
 # See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
@@ -150,7 +159,6 @@ ctrl-alt-e = 'workspace E'
 ctrl-alt-a = 'workspace A' # In your config, you can drop workspace bindings that you don't need
 ctrl-alt-s = 'workspace S'
 ctrl-alt-d = 'workspace D'
-ctrl-alt-z = 'workspace Z'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
 ctrl-alt-shift-1 = 'move-node-to-workspace 1'
@@ -168,7 +176,6 @@ ctrl-alt-shift-e = 'move-node-to-workspace E'
 ctrl-alt-shift-a = 'move-node-to-workspace A'
 ctrl-alt-shift-s = 'move-node-to-workspace S'
 ctrl-alt-shift-d = 'move-node-to-workspace D'
-ctrl-alt-shift-z = 'move-node-to-workspace Z'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#workspace-back-and-forth
 ctrl-alt-tab = 'workspace-back-and-forth'
